terminal-plugin: updated manifest